# t-watch-s3

./: .gitignore  CMakeLists.txt  README.md  west.yml
.github/workflows/: pr.yaml
boards/t_watch_s3/: CMakeLists.txt  Kconfig  Kconfig.t_watch_s3  board.yml  t_watch_s3-pinctrl.dtsi  t_watch_s3_appcpu.dts  t_watch_s3_appcpu.yaml  t_watch_s3_boot.c  t_watch_s3_procpu.dts  t_watch_s3_procpu.yaml  t_watch_s3_procpu_defconfig  t_watch_s3_zephyr_ver.c
drivers/: CMakeLists.txt  Kconfig
drivers/axp2101/: CMakeLists.txt  Kconfig  Kconfig.axp2101  axp2101.c  axp2101.h  charger_axp2101.c  fuel_gauge_axp2101.c  gpio_axp2101.c  reg_axp2101.h  regulator_axp2101.c
drivers/bma4xx/: CMakeLists.txt  Kconfig  README.md  bma4xx_boot_reset.c  bma4xx_decoder_patch.c
drivers/rmt/: CMakeLists.txt  Kconfig  Kconfig.esp32  rmt_esp32.c
drivers/rmt_tx/: CMakeLists.txt  Kconfig  Kconfig.esp32  rmt_tx_esp32.c  rmt_tx_esp32_channel.c
drivers/rmt_tx/esp32/: CMakeLists.txt  rmt_tx_esp32.c  rmt_tx_esp32.h  rmt_tx_esp32_channel.c
dts/bindings/axp2101/: x-powers,axp2101-charger.yaml  x-powers,axp2101-fuel-gauge.yaml  x-powers,axp2101-gpio.yaml  x-powers,axp2101-regulator.yaml  x-powers,axp2101.yaml
dts/bindings/rmt/: espressif,esp32-rmt-tx.yaml  espressif,esp32-rmt.yaml
include/zephyr/drivers/: rmt.h  rmt_tx.h
tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/src/: bluetooth.c  button.c  charger.c  display.c  flash.c  fuel_gauge.c  haptics.c  hello_world.c  imu.c  lora.c  lorawan.c  main.c  power.c  rmt.c  rtc.c  touch.c  wifi.c  zdsp_backend.h
(+1 files in other folders)
